more progress for registration - now sending confirmation mail

--- a/socrates/frontendtests/fixtures/forms.jade
+++ b/socrates/frontendtests/fixtures/forms.jade
@@ -10,7 +10,7 @@ form#participationform.relaxed(action='/registration/completeRegistration', meth
   +csrf
   fieldset
     +memberinfoform(member, 'members.edit_registration')
-    +userinfoform(addon)
+    +userinfoform(addon, participation)
     .row(style='margin-bottom: 10px')
       .col-sm-12
         +memberSubmitButtons('I really do want to participate!')
