--- a/socrates/lib/registration/views/participate.jade
+++ b/socrates/lib/registration/views/participate.jade
@@ -22,7 +22,7 @@ block content
     +hidden('duration', registrationTuple.duration)
     fieldset
       +memberinfoform(member, 'members.edit_registration')
-      +userinfoform(addon)
+      +userinfoform(addon, participation)
 
       .row(style='margin-bottom: 10px')
         .col-sm-12
