--- a/softwerkskammer/lib/site/views/index.jade
+++ b/softwerkskammer/lib/site/views/index.jade
@@ -11,6 +11,23 @@ block content
         h2 Softwerkskammer <br>
           small #{t('general.communities')}
 
+      .panel.panel-default
+        .panel-heading
+          h4.panel-title #{t('general.current')}
+        .panel-body
+          .row
+            .col-md-3
+              a(href='http://socrates-conference.de'): img(src='/img/socrates2015_logo.png', width='150')
+            .col-md-9
+              h3
+                a(href='http://socrates-conference.de') SoCraTes 2015
+                br
+                small.
+                  5th International Software Craftsmanship and Testing Conference<br>
+                  27-30 August 2015, Soltau, Germany
+              h3
+                a(href='http://socrates-conference.de') Pre-Register here!
+
   .row
     .col-md-6
       !=t('general.about_us_text', { postProcess: 'jade' })
