Internationalising SoCraTes announcement.

--- a/softwerkskammer/lib/site/views/index.jade
+++ b/softwerkskammer/lib/site/views/index.jade
@@ -23,10 +23,10 @@ block content
                 a(href='http://socrates-conference.de') SoCraTes 2015
                 br
                 small.
-                  5th International Software Craftsmanship and Testing Conference<br>
-                  27-30 August 2015, Soltau, Germany
+                  #{t('general.socrates_text')}<br>
+                  #{t('general.socrates_date')}
               h3
-                a(href='http://socrates-conference.de') Pre-Register here!
+                a(href='http://socrates-conference.de') #{t('general.socrates_register')}
 
   .row
     .col-md-6
