--- a/softwerkskammer/lib/site/views/index.jade
+++ b/softwerkskammer/lib/site/views/index.jade
@@ -17,16 +17,16 @@ block content
         .panel-body
           .row
             .col-md-3
-              a(href='http://socrates-conference.de'): img(src='/img/socrates2015_logo.png', width='150')
+              a(href='https://socrates-conference.de'): img(src='https://socrates-conference.de/img/socrates2015_logo.png', width='150')
             .col-md-9
               h3
-                a(href='http://socrates-conference.de') SoCraTes 2015
+                a(href='https://socrates-conference.de') SoCraTes 2015
                 br
                 small.
                   #{t('general.socrates_text')}<br>
                   #{t('general.socrates_date')}
               h3
-                a(href='http://socrates-conference.de') #{t('general.socrates_register')}
+                a(href='https://socrates-conference.de') #{t('general.socrates_register')}
 
   .row
     .col-md-6
