--- a/softwerkskammer/views/layout.jade
+++ b/softwerkskammer/views/layout.jade
@@ -11,6 +11,7 @@ block specific
     #calendar
     .row
       .col-md-12
+        h2 Wiki Links
         h4
           a(href='/wiki/alle/europaweite-veranstaltungen-2015') #{t('general.events_in_europe')} 2015
           br
