Adding SoCraTes Day Switzerland

--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -60,27 +60,32 @@ block content
               h5
                 +extlink('http://www.codefreeze.fi/', 'CodeFreeze')
                 br
-                small 3 - 4 Feb, Kiilopää, Finland
+                small 3 - 4 Feb 2015, Kiilopää, Finland
             .col-sm-6
               h5
                 +extlink('http://socrates-conference.es/', 'SoCraTes Canaries 2015')
                 br
-                small 26 Feb - 1 Mar, Tenerife
+                small 26 Feb - 1 Mar 2015, Tenerife
             .col-sm-6
               h5
                 +extlink('http://2015.itakeunconf.com/', 'I T.A.K.E. Unconference')
                 br
-                small 28 - 29 May, Bucharest
+                small 28 - 29 May 2015, Bucharest
             .col-sm-6
               h5
                 +extlink('http://socratesuk.org/', 'SoCraTes UK 2015')
                 br
-                small 4 - 7 June, Farncombe Estate
+                small 4 - 7 June 2015, Farncombe Estate
+            .col-sm-6
+              h5
+                +extlink('http://socrates-day.ch/', 'SoCraTes Day Switzerland')
+                br
+                small 19 June 2015, Zurich
             .col-sm-6
               h5
                 +extlink('http://socrates-fr.github.io', 'SoCraTes France 2015')
                 br
-                small 24 - 27 September, Rochegude
+                small 24 - 27 Sept 2015, Rochegude
 
 
 
