--- a/socrates/lib/members/views/edit.jade
+++ b/socrates/lib/members/views/edit.jade
@@ -1,7 +1,7 @@
 include  ../../../views/formComponents
 include userinfoform
 
-extends ../../../views/simpleLayout
+extends ../../../views/layout
 
 block scripts
   script(src='/clientscripts/check-memberform.js')
@@ -15,6 +15,18 @@ block title
 
 block content
   form#memberform.relaxed(action='/members/submit',method='post')
+    .btn-group.pull-right
+      if (accessrights.isRegistered())
+        a.btn.btn-default(href='javascript:history.back()', type='cancel') #{t('general.back')}
+      else
+        a.btn.btn-danger(href='/auth/logout', type='cancel') #{t('members.cancel')}
+      if (addon && participation && !participation.payment().paymentDone())
+        button.btn.btn-warning(type='submit')
+          i.fa.fa-money.fa-fw &nbsp;
+          | Save & Pay
+      else
+        button.btn.btn-primary(type='submit') #{t('general.save')}
+
     +csrf
     .row
       .col-sm-12
