Set registration opening in config file, use it for opening the registration and for rendering the date before the opening.

--- a/socrates/lib/registration/views/get.jade
+++ b/socrates/lib/registration/views/get.jade
@@ -33,4 +33,4 @@ block content
           small SoCraTes, 27 - 30 August 2015
   .row
     .col-md-12
-      +participationinfoform(activity, roomOptions, registrationPossible, alreadyRegistered, alreadyOnWaitinglist)
+      +participationinfoform(activity, roomOptions, registrationPossible, alreadyRegistered, alreadyOnWaitinglist, registrationOpening)
