--- a/socrates/lib/registration/views/participationinfoform.jade
+++ b/socrates/lib/registration/views/participationinfoform.jade
@@ -1,5 +1,5 @@
 include  ../../../views/formComponents
-mixin participationinfoform(activity, roomOptions, registrationPossible, alreadyRegistered, alreadyOnWaitinglist)
+mixin participationinfoform(activity, roomOptions, registrationPossible, alreadyRegistered, alreadyOnWaitinglist, registrationOpening)
   .row
     .col-md-6
       h3 Room Options
@@ -111,7 +111,7 @@ mixin participationinfoform(activity, roomOptions, registrationPossible, already
                 if (registrationPossible)
                   | I really do want to participate!
                 else
-                  | Registration will open 28 April, 19:00 CEST
+                  | Registration will open #{registrationOpening.format("dddd, Do MMMM YYYY, HH:mm [GMT]Z")}
         script.
           $(function () {
             var selectedInput = $('input[value="' + '#{activity.selectedOptionFor(accessrights.memberId())}"]')
