Added a "View Profile" shortcut to the login menu.

--- a/socrates/views/layoutComponents.jade
+++ b/socrates/views/layoutComponents.jade
@@ -8,6 +8,9 @@ mixin loginMenu(forInline)
        |  #{t('general.guest')}
       ul.dropdown-menu
         if accessrights.isRegistered()
+          li: a(href='/members/' + encodeURIComponent(user.member.nickname()))
+            span.glyphicon.glyphicon-eye-open
+            | &nbsp;#{t('members.view')}
           li: a(href='/members/edit')
             span.glyphicon.glyphicon-edit
             | &nbsp;#{t('members.edit')}
