Participants can now enter a roommate if they are in a shared room.

--- a/socrates/lib/members/views/edit.jade
+++ b/socrates/lib/members/views/edit.jade
@@ -35,7 +35,7 @@ block content
 
     +memberinfoform(member, accessrights.isRegistered() ? null : 'members.edit_preregistration')
     if (addon && addon.homeAddress)
-      +userinfoform(addon, participation)
+      +userinfoform(addon, participation, sharesARoom)
       .gutter
       p &nbsp;
 
