--- a/socrates/lib/registration/views/participate.jade
+++ b/socrates/lib/registration/views/participate.jade
@@ -33,7 +33,7 @@ block content
         +hidden('duration', registrationTuple.duration)
         fieldset
           +memberinfoform(member, 'members.edit_registration')
-          +userinfoform(addon, participation)
+          +userinfoform(addon, participation, registrationTuple.resourceName.indexOf('bed_in_') > -1)
     
     .row(style='margin-bottom: 10px')
       .col-sm-12
