--- a/socrates/lib/members/views/userinfoform.jade
+++ b/socrates/lib/members/views/userinfoform.jade
@@ -30,7 +30,7 @@ mixin memberinfoform(member, newmember_text)
       +text('email', 'E-Mail', member.email())
       +twitter('twitter', 'Twitter', member.twitter())
 
-mixin userinfoform(addon, participation)
+mixin userinfoform(addon, participation, sharesARoom)
   .row
     .col-sm-12
       hr
@@ -57,6 +57,11 @@ mixin userinfoform(addon, participation)
               for item in ['', 'Ladies\' XS', 'Ladies\' S', 'Ladies\' M', 'Ladies\' L', 'Ladies\' XL', 'Ladies\' XXL' ]
                 option(selected=addon.tShirtSize() === item) #{item}
   if participation
+    if sharesARoom
+      .row
+        .col-sm-12
+          hr
+          +text('roommate', 'Who do you want to share your room with', participation.roommate())
     .row
       .col-sm-12
         hr
