--- a/socrates/frontendtests/fixtures/forms.jade
+++ b/socrates/frontendtests/fixtures/forms.jade
@@ -4,7 +4,7 @@ include ../../lib/members/views/userinfoform
 
 +activityform(activity)
 
-+participationinfoform(activity, roomOptions, true)
++participationinfoform(activity, roomOptions, {isPossible: true})
 
 form#participationform.relaxed(action='/registration/completeRegistration', method='post')
   +csrf
