Refactored huge duplicate button block to use a mixin.

--- a/socrates/lib/members/views/edit.jade
+++ b/socrates/lib/members/views/edit.jade
@@ -15,17 +15,7 @@ block title
 
 block content
   form#memberform.relaxed(action='/members/submit',method='post')
-    .btn-group.pull-right
-      if (accessrights.isRegistered())
-        a.btn.btn-default(href='javascript:history.back()', type='cancel') #{t('general.back')}
-      else
-        a.btn.btn-danger(href='/auth/logout', type='cancel') #{t('members.cancel')}
-      if (addon && participation && !participation.payment().paymentDone())
-        button.btn.btn-warning(type='submit')
-          i.fa.fa-money.fa-fw &nbsp;
-          | Save & Pay
-      else
-        button.btn.btn-primary(type='submit') #{t('general.save')}
+    +editButtons
 
     +csrf
     .row
@@ -39,15 +29,18 @@ block content
       .gutter
       p &nbsp;
 
-    .btn-group.pull-right
-      if (accessrights.isRegistered())
-        a.btn.btn-default(href='javascript:history.back()', type='cancel') #{t('general.back')}
-      else
-        a.btn.btn-danger(href='/auth/logout', type='cancel') #{t('members.cancel')}
-      if (addon && participation && !participation.payment().paymentDone())
-        button.btn.btn-warning(type='submit')
-          i.fa.fa-money.fa-fw &nbsp;
-          | Save & Pay
-      else
-        button.btn.btn-primary(type='submit') #{t('general.save')}
+    +editButtons
+
+mixin editButtons
+  .btn-group.pull-right
+    if (accessrights.isRegistered())
+      a.btn.btn-default(href='javascript:history.back()', type='cancel') #{t('general.back')}
+    else
+      a.btn.btn-danger(href='/auth/logout', type='cancel') #{t('members.cancel')}
+    if (addon && participation && !participation.payment().paymentDone())
+      button.btn.btn-warning(type='submit')
+        i.fa.fa-money.fa-fw &nbsp;
+        | Save & Pay
+    else
+      button.btn.btn-primary(type='submit') #{t('general.save')}
   
