--- a/socrates/lib/registration/views/participate.jade
+++ b/socrates/lib/registration/views/participate.jade
@@ -15,8 +15,13 @@ block content
     if(registrationTuple.duration === 'waitinglist')
       h1 Waitinglist Registration<br>
     else
-      h1 Registration<br>
-      small Personal Information
+      h1 Registration #{' '}
+        small Personal Information
+      
+    p.
+      You have #{expiresIn} minutes to complete your registration. The reservation will expire 
+      at #{expiresAt.locale('en-gb').format('LT')}.
+      After that you will have to restart the process from the previous page.
       
   form#participationform.relaxed(action='/registration/completeRegistration', method='post')
     .row(style='margin-bottom: 10px')
