--- a/socrates/lib/notifications/jade/paymenttemplate.jade
+++ b/socrates/lib/notifications/jade/paymenttemplate.jade
@@ -4,12 +4,12 @@ html
     h3 Confirmation / Bestätigung
     p.
       Hello #{member.displayName()},<br>
-      we confirm that your payment for activity "#{activity.title()}" has reached our account.
+      we confirm that your payment for activity "#{activityTitle}" has reached our account.
     p.
       You will receive a billable receipt during the event.
     hr
     p. 
       Hallo #{member.displayName()},<br>
-      hiermit bestätigen wir den Eingang Deiner Zahlung für die Aktivität "#{activity.title()}" auf unserem Konto.
+      hiermit bestätigen wir den Eingang Deiner Zahlung für die Aktivität "#{activityTitle}" auf unserem Konto.
     p.
       Eine offizielle Rechnung wird im Rahmen des Events ausgestellt.
